--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,31 +1,39 @@
-//database {
-//  profile = "slick.jdbc.H2Profile"
-//  db = {
-//    dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
-//    properties = {
-//      driver = "org.h2.Driver"
-//      url = "jdbc:h2:./example"
-//    }
-//    keepAliveConnection = true
-//    numThreads = 1
-//  }
-//}
-
-database {
-  profile = "slick.jdbc.MySQLProfile"
+model {
+  profile = "slick.jdbc.H2Profile"
+  generator = {
+    object = "Tables"
+    package = "slicked.model"
+  }
   db = {
-    dataSourceClass = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+    dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
     properties = {
-      serverName = "subeli.com"
-      databaseName = "slick"
-      user = "slick"
-      password = "slickslick1234"
-      cachePrepStmts = true
-      prepStmtCacheSize = 250
-      prepStmtCacheSqlLimit = 2048
-      useServerPrepStmts = true
+      driver = "org.h2.Driver"
+      url = "jdbc:h2:./example"
     }
     keepAliveConnection = true
     numThreads = 1
   }
 }
+
+//model {
+//  profile = "slick.jdbc.MySQLProfile"
+//  generator = {
+//    object = "Tables"
+//    package = "slicked.model"
+//  }
+//  db = {
+//    dataSourceClass = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+//    properties = {
+//      serverName = "subeli.com"
+//      databaseName = "slick"
+//      user = "slick"
+//      password = "slickslick1234"
+//      cachePrepStmts = true
+//      prepStmtCacheSize = 250
+//      prepStmtCacheSqlLimit = 2048
+//      useServerPrepStmts = true
+//    }
+//    keepAliveConnection = true
+//    numThreads = 1
+//  }
+//}
