--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,9 +1,16 @@
+mode = "production"
+//mode = "test"
+
 model {
-  profile = "slick.jdbc.H2Profile"
   generator = {
     object = "Tables"
     package = "slicked.model"
+    tableFilterRegex = ".*"
   }
+}
+
+test.model {
+  profile = "slick.jdbc.H2Profile$"
   db = {
     dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
     properties = {
@@ -15,25 +22,21 @@ model {
   }
 }
 
-//model {
-//  profile = "slick.jdbc.MySQLProfile"
-//  generator = {
-//    object = "Tables"
-//    package = "slicked.model"
-//  }
-//  db = {
-//    dataSourceClass = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-//    properties = {
-//      serverName = "subeli.com"
-//      databaseName = "slick"
-//      user = "slick"
-//      password = "slickslick1234"
-//      cachePrepStmts = true
-//      prepStmtCacheSize = 250
-//      prepStmtCacheSqlLimit = 2048
-//      useServerPrepStmts = true
-//    }
-//    keepAliveConnection = true
-//    numThreads = 1
-//  }
-//}
+production.model {
+  profile = "slick.jdbc.MySQLProfile$"
+  db = {
+    dataSourceClass = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+    properties = {
+      serverName = "subeli.com"
+      databaseName = "slick"
+      user = "slick"
+      password = "slickslick1234"
+      cachePrepStmts = true
+      prepStmtCacheSize = 250
+      prepStmtCacheSqlLimit = 2048
+      useServerPrepStmts = true
+    }
+    keepAliveConnection = true
+    numThreads = 1
+  }
+}
