--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,15 +1,6 @@
-mode = "production"
-//mode = "test"
+mode = "prod"
 
-model {
-  generator = {
-    object = "Tables"
-    package = "slicked.model"
-    tableFilterRegex = ".*"
-  }
-}
-
-test.model {
+dev.model {
   profile = "slick.jdbc.H2Profile$"
   db = {
     dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
@@ -22,10 +13,14 @@ test.model {
   }
 }
 
-production.model {
+prod.model {
   profile = "slick.jdbc.MySQLProfile$"
   db = {
     dataSourceClass = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+    connectionPool = HikariCP
+    connectionTimeout = 600000
+    keepAliveConnection = true
+    numThreads = 1
     properties = {
       serverName = "subeli.com"
       databaseName = "slick"
@@ -36,7 +31,5 @@ production.model {
       prepStmtCacheSqlLimit = 2048
       useServerPrepStmts = true
     }
-    keepAliveConnection = true
-    numThreads = 1
   }
 }
