--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,6 +1,6 @@
-mode = "prod"
+configuration.mode = "production"
 
-dev.model {
+default.model {
   profile = "slick.jdbc.H2Profile$"
   db = {
     dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
@@ -13,7 +13,7 @@ dev.model {
   }
 }
 
-prod.model {
+production.model {
   profile = "slick.jdbc.MySQLProfile$"
   db = {
     dataSourceClass = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
