--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,35 +1,39 @@
-configuration.mode = "production"
+configuration.mode = "default"
 
-default.model {
-  profile = "slick.jdbc.H2Profile$"
-  db = {
-    dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
-    properties = {
-      driver = "org.h2.Driver"
-      url = "jdbc:h2:./example"
+default {
+  model {
+    profile = "slick.jdbc.H2Profile$"
+    db = {
+      dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+      properties = {
+        driver = "org.h2.Driver"
+        url = "jdbc:h2:./example"
+      }
+      keepAliveConnection = true
+      numThreads = 1
     }
-    keepAliveConnection = true
-    numThreads = 1
   }
 }
 
-production.model {
-  profile = "slick.jdbc.MySQLProfile$"
-  db = {
-    dataSourceClass = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-    connectionPool = HikariCP
-    connectionTimeout = 600000
-    keepAliveConnection = true
-    numThreads = 1
-    properties = {
-      serverName = "subeli.com"
-      databaseName = "slick"
-      user = "slick"
-      password = "slickslick1234"
-      cachePrepStmts = true
-      prepStmtCacheSize = 250
-      prepStmtCacheSqlLimit = 2048
-      useServerPrepStmts = true
+production {
+  model {
+    profile = "slick.jdbc.MySQLProfile$"
+    db = {
+      dataSourceClass = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+      connectionPool = HikariCP
+      connectionTimeout = 600000
+      keepAliveConnection = true
+      numThreads = 1
+      properties = {
+        serverName = "subeli.com"
+        databaseName = "slick"
+        user = "slick"
+        password = "slickslick1234"
+        cachePrepStmts = true
+        prepStmtCacheSize = 250
+        prepStmtCacheSqlLimit = 2048
+        useServerPrepStmts = true
+      }
     }
   }
 }
