--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -2,6 +2,11 @@ configuration.mode = "default"
 
 default {
   model {
+    generator = {
+      object = "Tables"
+      package = "model"
+      tableFilterRegex = ".*"
+    }
     profile = "slick.jdbc.H2Profile$"
     db = {
       dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
