--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,17 +1,20 @@
-model {
-  generator = {
-    object = "Tables"
-    package = "model"
-    tableFilterRegex = ".*"
-  }
+slicked.config = "h2"
+
+h2 {
   profile = "slick.jdbc.H2Profile$"
   db = {
     dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
     properties = {
       driver = "org.h2.Driver"
-      url = "jdbc:h2:/tmp/example"
+      url = "jdbc:h2:./h2"
     }
     keepAliveConnection = true
     numThreads = 1
   }
+}
+
+model.generator = {
+  object = "Tables"
+  package = "model"
+  tableFilterRegex = ".*"
 }
