--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -6,7 +6,7 @@ h2 {
     dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
     properties = {
       driver = "org.h2.Driver"
-      url = "jdbc:h2:./h2"
+      url = "jdbc:h2:./db/h2"
     }
     keepAliveConnection = true
     numThreads = 1
