--- a/db/hsqldb.properties
+++ b/db/hsqldb.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.3.4
-#Sat Aug 26 20:21:29 CEST 2017
-version=2.3.4
-modified=yes
+#HSQL Database Engine 2.4.0
+#Sun Aug 27 19:18:59 CEST 2017
+version=2.4.0
+modified=no
 tx_timestamp=0
