--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,4 +1,4 @@
-slicked.config = "h2"
+slicked.config = "hsql"
 
 h2 {
   profile = "slick.jdbc.H2Profile$"
@@ -7,6 +7,21 @@ h2 {
     properties = {
       driver = "org.h2.Driver"
       url = "jdbc:h2:./db/h2"
+    }
+    keepAliveConnection = true
+    numThreads = 1
+  }
+}
+
+hsql {
+  profile = "slick.jdbc.HsqldbProfile$"
+  db = {
+    dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+    properties = {
+      driver = "org.hsqldb.jdbcDriver"
+      url = "jdbc:hsqldb:file:./db/hsqldb"
+      user = "sa"
+      password = "sa"
     }
     keepAliveConnection = true
     numThreads = 1
