--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -19,9 +19,22 @@ hsql {
     dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
     properties = {
       driver = "org.hsqldb.jdbcDriver"
-      url = "jdbc:hsqldb:file:./db/hsqldb"
+      url = "jdbc:hsqldb:file:./db/hsql"
       user = "sa"
       password = "sa"
+    }
+    keepAliveConnection = true
+    numThreads = 1
+  }
+}
+
+derby {
+  profile = "slick.jdbc.DerbyProfile$"
+  db = {
+    dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+    properties = {
+      driver = "org.apache.derby.jdbc.EmbeddedDriver"
+      url = "jdbc:derby:./db/derby;create=true"
     }
     keepAliveConnection = true
     numThreads = 1
