--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,6 +1,10 @@
-slicked.config = "hsql"
+generator = {
+  object = "Tables"
+  package = "model"
+  tableFilterRegex = ".*"
+}
 
-h2 {
+database {
   profile = "slick.jdbc.H2Profile$"
   db = {
     dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
@@ -13,36 +17,30 @@ h2 {
   }
 }
 
-hsql {
-  profile = "slick.jdbc.HsqldbProfile$"
-  db = {
-    dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
-    properties = {
-      driver = "org.hsqldb.jdbcDriver"
-      url = "jdbc:hsqldb:file:./db/hsql"
-      user = "sa"
-      password = "sa"
-    }
-    keepAliveConnection = true
-    numThreads = 1
-  }
-}
-
-derby {
-  profile = "slick.jdbc.DerbyProfile$"
-  db = {
-    dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
-    properties = {
-      driver = "org.apache.derby.jdbc.EmbeddedDriver"
-      url = "jdbc:derby:./db/derby;create=true"
-    }
-    keepAliveConnection = true
-    numThreads = 1
-  }
-}
-
-model.generator = {
-  object = "Tables"
-  package = "model"
-  tableFilterRegex = ".*"
-}
+//hsql {
+//  profile = "slick.jdbc.HsqldbProfile$"
+//  db = {
+//    dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+//    properties = {
+//      driver = "org.hsqldb.jdbcDriver"
+//      url = "jdbc:hsqldb:file:./db/hsql"
+//      user = "sa"
+//      password = "sa"
+//    }
+//    keepAliveConnection = true
+//    numThreads = 1
+//  }
+//}
+//
+//derby {
+//  profile = "slick.jdbc.DerbyProfile$"
+//  db = {
+//    dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+//    properties = {
+//      driver = "org.apache.derby.jdbc.EmbeddedDriver"
+//      url = "jdbc:derby:./db/derby;create=true"
+//    }
+//    keepAliveConnection = true
+//    numThreads = 1
+//  }
+//}
